se acomoda arbol de carpetas

--- a/seroprevalencia/notebooks/seroprevalencia.ipynb
+++ b/seroprevalencia/notebooks/seroprevalencia.ipynb
@@ -18,15 +18,14 @@
     "if not os.path.isfile(path+\"seroprevalencia_cali.csv\"):\n",
     "    seroprev_cali_excel = pd.read_excel(path+\"datos_seroprevalencia.xlsx\",sheet_name='CALI')\n",
     "    seroprev_bquilla_excel = pd.read_excel(path+\"datos_seroprevalencia.xlsx\",sheet_name='BQUILLA')\n",
-    "    seroprev_comb_excel = pd.read_excel(path+\"datos_seroprevalencia.xlsx\",sheet_name='C+B')\n",
+    "\n",
     "    \n",
-    "    seroprev_cali_excel.to_csv(path+\"seroprevalencia_cali.csv\",index=False)\n",
-    "    seroprev_bquilla_excel.to_csv(path+\"seroprevalencia_bquilla.csv\",index=False)\n",
-    "    seroprev_comb_excel.to_csv(path+\"seroprevalencia_comb.csv\",index=False)\n",
+    "    seroprev_cali_excel.to_csv(path+\"/cali/seroprevalencia_cali.csv\",index=False)\n",
+    "    seroprev_bquilla_excel.to_csv(path+\"/bquilla/seroprevalencia_bquilla.csv\",index=False)\n",
+    "\n",
     "    \n",
-    "df_cali    = pd.read_csv(path+\"seroprevalencia_cali.csv\")\n",
-    "df_bquilla = pd.read_csv(path+\"seroprevalencia_bquilla.csv\")\n",
-    "df_comb    = pd.read_csv(path+\"seroprevalencia_comb.csv\")"
+    "df_cali    = pd.read_csv(path+\"/cali/seroprevalencia_cali.csv\")\n",
+    "df_bquilla = pd.read_csv(path+\"/bquilla/seroprevalencia_bquilla.csv\")"
    ]
   },
   {
@@ -46,8 +45,7 @@
    ],
    "source": [
     "print(df_cali.shape)\n",
-    "print(df_bquilla.shape)\n",
-    "print(df_comb.shape)"
+    "print(df_bquilla.shape)"
    ]
   },
   {
@@ -64,8 +62,7 @@
    "outputs": [],
    "source": [
     "df_cali    = df_cali.drop(['raza','diagnosticado_covid'], axis=1)\n",
-    "df_bquilla = df_bquilla.drop(['raza','diagnosticado_covid'], axis=1)\n",
-    "df_comb    = df_comb.drop(['raza','diagnosticado_covid'], axis=1)"
+    "df_bquilla = df_bquilla.drop(['raza','diagnosticado_covid'], axis=1)"
    ]
   },
   {
@@ -2372,9 +2369,9 @@
    "source": [
     "## se guardarán solo las columnas RESULTADO, Lavel, Score\n",
     "columnas = [\"RESULTADO\",\"Label\",\"Score\"]\n",
-    "predictions_catboost_cali[columnas].to_csv(path+\"predictions_catboost_cali.csv\",index=False)\n",
-    "predictions_ada_cali[columnas].to_csv(path+\"predictions_ada_cali.csv\",index=False)\n",
-    "predictions_rf_cali[columnas].to_csv(path+\"predictions_rf_cali.csv\",index=False)"
+    "predictions_catboost_cali[columnas].to_csv(path+\"/cali/predictions/predictions_catboost_cali.csv\",index=False)\n",
+    "predictions_ada_cali[columnas].to_csv(path+\"/cali/predictions/predictions_ada_cali.csv\",index=False)\n",
+    "predictions_rf_cali[columnas].to_csv(path+\"/cali/predictions/predictions_rf_cali.csv\",index=False)"
    ]
   },
   {
@@ -2383,9 +2380,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resultados_cali_catboost = pd.read_csv(path+\"predictions_catboost_cali.csv\")\n",
-    "resultados_cali_ada      = pd.read_csv(path+\"predictions_ada_cali.csv\")\n",
-    "resultados_cali_rf       = pd.read_csv(path+\"predictions_rf_cali.csv\")"
+    "resultados_cali_catboost = pd.read_csv(path+\"/cali/predictions/predictions_catboost_cali.csv\")\n",
+    "resultados_cali_ada      = pd.read_csv(path+\"/cali/predictions/predictions_ada_cali.csv\")\n",
+    "resultados_cali_rf       = pd.read_csv(path+\"/cali/predictions/predictions_rf_cali.csv\")"
    ]
   },
   {
@@ -4624,9 +4621,9 @@
    "source": [
     "## se guardarán solo las columnas RESULTADO, Lavel, Score\n",
     "columnas = [\"RESULTADO\",\"Label\",\"Score\"]\n",
-    "predictions_gbc_bquilla[columnas].to_csv(path+\"predictions_gbc_bquilla.csv\",index=False)\n",
-    "predictions_lr_bquilla[columnas].to_csv(path+\"predictions_lr_bquilla.csv\",index=False)\n",
-    "predictions_nb_bquilla[columnas].to_csv(path+\"predictions_nb_bquilla.csv\",index=False)"
+    "predictions_gbc_bquilla[columnas].to_csv(path+\"/bquilla/predictions/predictions_gbc_bquilla.csv\",index=False)\n",
+    "predictions_lr_bquilla[columnas].to_csv(path+\"/bquilla/predictions/predictions_lr_bquilla.csv\",index=False)\n",
+    "predictions_nb_bquilla[columnas].to_csv(path+\"/bquilla/predictions/predictions_nb_bquilla.csv\",index=False)"
    ]
   },
   {
@@ -4635,9 +4632,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resultados_bquilla_gbc = pd.read_csv(path+\"predictions_gbc_bquilla.csv\")\n",
-    "resultados_bquilla_lr  = pd.read_csv(path+\"predictions_lr_bquilla.csv\")\n",
-    "resultados_bquilla_nb  = pd.read_csv(path+\"predictions_nb_bquilla.csv\")"
+    "resultados_bquilla_gbc = pd.read_csv(path+\"/bquilla/predictions/predictions_gbc_bquilla.csv\")\n",
+    "resultados_bquilla_lr  = pd.read_csv(path+\"/bquilla/predictions/predictions_lr_bquilla.csv\")\n",
+    "resultados_bquilla_nb  = pd.read_csv(path+\"/bquilla/predictions/predictions_nb_bquilla.csv\")"
    ]
   },
   {
